Bringing the source code to the latest version to continue development in this fork

--- a/creepy/include/creepy_resources.qrc
+++ b/creepy/include/creepy_resources.qrc
@@ -1,26 +1,28 @@
 <RCC>
   <qresource prefix="creepy">
+    <file>counter.png</file>
+    <file>application-sidebar-list.png</file>
+    <file>blue-document-export.png</file>
+    <file>blue-folder-horizontal.png</file>
+    <file>receipt-text.png</file>
+    <file>bookmark.png</file>
+    <file>cross-circle.png</file>
+    <file>cross.png</file>
+    <file>exclamation.png</file>
+    <file>fire.png</file>
+    <file>globe.png</file>
+    <file>image-instagram.png</file>
+    <file>lock.png</file>
+    <file>map.html</file>
+    <file>map.png</file>
+    <file>marker.png</file>
+    <file>minus-circle.png</file>
+    <file>minus.png</file>
+    <file>plus-circle.png</file>
+    <file>target.png</file>
+    <file>tick.png</file>
+    <file>user.png</file>
+    <file>calendar-day.png</file>
     <file alias="creepy">Eye_of_Sauron_by_Blood_Solice.png</file>
-    <file alias="calendar">../../../../icons/32/calendar-day.png</file>
-    <file alias="cross">../../../../icons/32/cross.png</file>
-    <file alias="cross-circle">../../../../icons/32/cross-circle.png</file>
-    <file alias="exclamation">../../../../icons/32/exclamation.png</file>
-    <file alias="properties">../../../../icons/32/application-sidebar-list.png</file>
-    <file alias="image-instagram">../../../../icons/32/image-instagram.png</file>
-    <file alias="heatmap">../../../../icons/24/fire.png</file>
-    <file alias="info">../../../../icons/32/information.png</file>
-    <file alias="lock">../../../../icons/32/lock.png</file>
-    <file alias="minus">../../../../icons/32/minus.png</file>
-    <file alias="map">../../../../icons/32/map.png</file>
-    <file alias="minus-circle">../../../../icons/32/minus-circle.png</file>
-    <file alias="export">../../../../icons/24/blue-document-export.png</file>
-    <file alias="globe">../../../../icons/24/globe.png</file>
-    <file alias="marker">../../../../icons/24/marker.png</file>
-    <file alias="target">../../../../icons/24/target.png</file>
-    <file alias="user">../../../../icons/24/user.png</file>
-    <file alias="add">../../../../icons/32/plus-circle.png</file>
-    <file alias="folder">../../../../icons/32/blue-folder-horizontal.png</file>
-    <file alias="bookmark">../../../../icons/32/bookmark.png</file>
-    <file alias="tick">../../../../icons/32/tick.png</file>
   </qresource>
 </RCC>
