Fixed bug with heatmap containing locations from previously analyzed projects

--- a/creepy/include/map.html
+++ b/creepy/include/map.html
@@ -74,6 +74,7 @@
               markersArray[i].setMap(null);
           }
           markersArray.length = 0;
+          locArray = [];
       }
 
       function hideMarkers() {
