Added functionality for place based project

--- a/gui/placeProjectWizard.ui
+++ b/gui/placeProjectWizard.ui
@@ -153,6 +153,34 @@
       </widget>
      </item>
      <item>
+      <layout class="QHBoxLayout" name="searchAddressLayout">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
+       <item>
+        <widget class="QLabel" name="searchAddressLabel">
+         <property name="text">
+          <string>Address</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="searchAddressInput">
+         <property name="inputMask">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="searchAddressButton">
+         <property name="text">
+          <string>Search</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
       <layout class="QHBoxLayout" name="controlsContainerLayout">
        <item>
         <spacer name="horizontalSpacer">
